Cyber Tech Ocean - update INDEX

--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Basic Meta Tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- SEO Meta Tags -->
+    <title>Cyber Tech Ocean – Nairobi’s Premier Tech Hub</title>
+    <meta
+      name="description"
+      content="Cyber Tech Ocean offers Web Development, Career Assistance, eCitizen services, Graphic Design, Digital Marketing, Academic Writing, and Data Analysis in Nairobi."
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://cybertechocean.vercel.app/" />
+
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://i.imgur.com/xTyDTKU.png"
+    />
+
+    <!-- Open Graph for Social Sharing -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Cyber Tech Ocean – Nairobi’s Premier Tech Hub" />
+    <meta
+      property="og:description"
+      content="Your one-stop for Web Development, Career Assistance, eCitizen services, Graphic Design, Digital Marketing, Academic Writing, and Data Analysis."
+    />
+    <meta property="og:url" content="https://cybertechocean.vercel.app/" />
+    <meta property="og:image" content="https://i.imgur.com/xTyDTKU.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cyber Tech Ocean – Nairobi’s Premier Tech Hub" />
+    <meta
+      name="twitter:description"
+      content="Offering Web Development, Career Assistance, eCitizen services, Graphic Design, Digital Marketing, Academic Writing, and Data Analysis."
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/xTyDTKU.png" />
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="/src/index.css" />
-
-    <title>Cyber Tech Ocean</title>
-
-    <meta property="og:image" content="/og-preview.png" />
   </head>
   <body>
     <div id="root"></div>
